--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AdminLayout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AdminLayout.cshtml
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sidebar Menu</title>
+    <title>Admin Panel</title>
 
-    <link rel="stylesheet" href="~/css/AdminStyle.css">
+    <link rel="stylesheet" href="~/css/AdminStyle.css" asp-append-version="true">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap5.min.css">
 </head>
 
 
@@ -44,7 +47,7 @@
                     </a>
                 </li>
                 <li class="tooltip-element" data-tooltip="1">
-                    <a asp-controller="Auth" asp-action="Index" data-active="1">
+                <a asp-controller="Admin" asp-action="CmsPage" data-active="1">
                         <div class="icon">
                             <i class="fa-solid fa-file-lines"></i>
                         </div>
@@ -199,18 +202,57 @@
 
 
             
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
           </div>
+           
         </header>
         <partial name="_Notification" />
         @RenderBody()
     </main>
+@*    datatable*@
+   <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.3/js/dataTables.bootstrap5.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.4.0/js/responsive.bootstrap5.min.js"></script>
+    <script>
+            let dataTable = $('#example').DataTable(
+                {
+                    responsive: true,
+                    language: {
+                        "paginate": {
+                            "previous": "&lt",
+                            "next": "&gt",
+                            "first": "&lt&lt",
+                            "last": "&gt&gt"
+                        }
+                    },
 
-
+                    searching : true,
+                    dom: '<"">rt<p>',
+                    pagingType: 'full_numbers',
+                    lengthChange: false,
+                    info: false,
+                });
+            $('#searchUser').on('keyup', function () {
+                dataTable.search($(this).val()).draw();
+                var dataTableEmpty = $('.dataTables_empty');
+                if (dataTableEmpty.length > 0 && dataTableEmpty.is(':visible')) {
+                    $('example_paginate pagination').hide();
+                }
+                else {
+                    $('example_paginate').show();
+                }
+            });
+      
+    </script>
+    @*    datatable ends*@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
-    <script src="~/js/Admin.js"></script>
+    
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/Admin.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
-
 </html>
