--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/ForgetPass.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/ForgetPass.cshtml
@@ -13,6 +13,7 @@
                 <div class="m-3">
                     <label asp-for="Email" class="form-label ">Email address</label>
                     <input asp-for="Email" type="email" class="form-control w-100" placeholder="Enter your email address..." id="exampleInputEmail1">
+                    <span asp-validation-for="Email" class="validate-text text-danger"></span>
                 </div>
 
                 <div class="d-grid  mx-auto p-2 ">
