--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/_AuthLayout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/_AuthLayout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="~/css/AuthStyle.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CI_Platform_web.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
 </head>
 <body>
             <div class="container-fluid d-flex">
