--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -263,17 +263,9 @@
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
 
-    @*  <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    *@
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="~/js/Filter.js" asp-append-version="true"></script>
- @*   <script>
-        $(document).ready(function () {
-            $('#myTable').DataTable();
-        });
-    </script>*@
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
